# rustmtest

./: Cargo.toml  README.md  memaddr.tst
.github/workflows/: build.yml
src/: lex.rs  main.rs  testcase.rs
src/lex/: README  mod.rs
