[package]
name = "rustmtest"
version = "0.1.0"
description = "Test STM32F4 ELF binaries before flashing them to a device"
authors = ["Byron Ellacott <code@bje.id.au>"]
documentation = "README.md"
homepage = "https://github.com/codebje/rustmtest/"
repository = "https://github.com/codebje/rustmtest.git"
edition = "2018"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.2"
unicorn = "0.9.1"
exitcode = "1.1.2"
failure = "0.1.6"
byteorder = "1.3.2"
